--- a/settings.json
+++ b/settings.json
@@ -7,9 +7,9 @@
 "autocomposing": false,
 "autorecording": false,
 "BotName":"Doge Bot", 
-"NomorOwner":"916909137213", 
-"NomorOwner2":"+91 690-913-7213", 
-"NamaOwner":"Xeon", 
+"NomorOwner":"21695485145", 
+"NomorOwner2":"+21622923085", 
+"NamaOwner":"ＲＡＹＥＮ", 
 "Dana":"6909137213", 
 "Pulsa":"6909137213", 
 "Ovo":"6909137213", 
